--- a/backend_python/README
+++ b/backend_python/README
@@ -35,6 +35,8 @@ DELETE /medic_reviews/<idReview> sterge review-ul cu id-ul idReview
 GET /medical_data returneaza o lista de {"medicName": string, "consultationDate": string, "treatment": string}
 POST /medical_data primeste {"patientUsername": username pacient, "treatment": string, "consultationDate": string}
     obs: consultationDate trebuie sa fie in formatul "dd/mm/yyyy" ex: "21/07/1998"
+    obs 2: Trebuie sa fii logat ca medic ca sa postezi o consultatie
+            (verific si pe backend asta just in case, dar nu ar trebui sa apara deloc optiunea pe frontend)
 
 
     -- personal data --
@@ -73,5 +75,6 @@ DELETE /appointments/<idAppointment> sterge review-ul cu id-ul idAppointment
 
 GET /blood_donations returneaza o lista de {"donationDate": string}
 POST /blood_donations o sa primeasca {"patientUsername": string, "donationDate": string}
-    obs: INCA NU E GATA BLOOD DONATIONS, NU FOLOSITI
+    obs: Trebuie sa fii logat ca medic ca sa postezi blood donation
+        (verific si pe backend asta just in case, dar nu ar trebui sa apara deloc optiunea pe frontend)
     obs 2: data trimisa de pe frontend trebuie tot in formatul "dd/mm/yyyy"
